syntax = "proto3";
package proto;
option go_package = ".";
import "google/protobuf/timestamp.proto";
import "constants.proto";

import "google/api/annotations.proto";

message Task {
  string name = 2;
  bool isdone = 3;
  google.protobuf.Timestamp createdat = 4;
  google.protobuf.Timestamp updatedat = 5;
}


message GetAllTasksRequest {}
message GetAllTasksResponse {
  repeated Task data = 6;
  DBOPERATIONSTATUS status= 7;
}

message CreateTasksRequest{
  string name = 1;
}
message CreateTasksResponse{
  Task data = 1;
  DBOPERATIONSTATUS status= 2;
}

service TaskService {
  rpc GetAllTasks(GetAllTasksRequest) returns (GetAllTasksResponse){
    option (google.api.http) = {
      get: "/v1/tasks"
    };
  };
  rpc CreateTask(CreateTasksRequest) returns (CreateTasksResponse);
}